solved liecens add/edit problem with Ajax

--- a/app/views/licenses/edit.js.erb
+++ b/app/views/licenses/edit.js.erb
@@ -1,2 +1,2 @@
-alert('<%= j(render "form") %>');
 $('#id_license').html('<%= j(render "form") %>');
+$('#datepicker').datepicker({ dateFormat: 'yy-mm-dd' }).val();
