--- a/app/views/licenses/create.js.erb
+++ b/app/views/licenses/create.js.erb
@@ -1,10 +1,6 @@
-
-
 $('#license_no_of_licenses').val('');
 $('#datepicker').val('');
-
-<% @license = License.new %>
-<% @licenses = License.where("school_id = '5' AND delete_flag is not true").order("created_at DESC")%>
-
+		
 $('#id_license').html('<%= j(render "form") %>');
 $('#id_license_info').html('<%= j(render "licenses_info") %>')
+$('#datepicker').datepicker({ dateFormat: 'yy-mm-dd' }).val();
