--- a/app/views/licenses/_licenses_info.html.erb
+++ b/app/views/licenses/_licenses_info.html.erb
@@ -4,6 +4,7 @@
 		    <table class="table" id="licenses_table">
                 <thead>
                     <tr>
+						<th>Batch Name</th>
 	                    <th>Number Of Liscenses</th>
 					    <!-- <th>License Used</th> -->
 	                    <th>License Expiration Date</th>
@@ -13,6 +14,7 @@
                 <tbody>
 			        <% @licenses.each do |lic| %>
 	                    <tr class="odd gradeX">
+							<td class=""><%= lic.license_batch_name %></td>
 	                        <td class=""><%= lic.no_of_licenses %></td>
 						    <!-- <td class=""><%#= lic.used_licenses %></td> -->
 	                        <td class=""><%= lic.expiry_date %></td>
