--- a/app/views/users/_assign_license.html.erb
+++ b/app/views/users/_assign_license.html.erb
@@ -3,24 +3,21 @@
 	    <div class="panel panel-default">
 	       <div class="panel-body">
 			   <%= form_for @user, :html=>{:class=>"form_validation"} do |f| %>
-	        	<%#= form_tag update_user_license_users_path(:id=>@user.id), :class=>"form_validation"  do %>
-				<%= f.hidden_field :assign_lic, :value=>""%>
-				<%= f.hidden_field :role_id, :value=>@role_id%>
-				<%= f.hidden_field :count, :value=>1%>
-				    <div class="row">
-		                <div class="col-sm-6">
-		                    <div class="form-group">
-								<%= f.label :license_id, "License", :class=>"control-label" %><span class="asterisk">*</span>
-		    					<%= f.select :license_id, options_for_select(@licenses.collect {|m| [ m.expiry_date, m.id ] }, :selected=>f.object.license_id), {:prompt=>"Select License"}, {:class=>"form-control class_licenses", :required=>true}%>
-								 <%=f.hidden_field :license_expiry_date%>
-						    </div>
-		                </div>
-		            </div>
+			           <div class="row">
+		                   <div class="col-sm-6">
+		                       <div class="form-group">
+							       <%= f.label :license_id, "License", :class=>"control-label" %><span class="asterisk">*</span>
+		    					   <%= f.select :license_id, options_for_select(@licenses.collect {|m| [ m.expiry_date, m.id ] }, :selected=>f.object.license_id), {:prompt=>"Select License"}, {:class=>"form-control class_licenses", :required=>true}%>
+								   <%= f.hidden_field :license_expiry_date%>
+						      </div>
+		                  </div>
+		               </div>
 			</div>
 	        <div class="panel-footer" data-no-turbolink>
 	            <%= f.submit "Save", class: "btn btn-primary btn-xs", data: { disable_with: 'Saving...' }%>
 				<button type="button" class="btn btn-default btn-xs" data-dismiss="modal">Close</button>
 	        </div>
+			    <%#= end %>
 			<% end %>
 	    </div>
     </div>       
@@ -29,10 +26,8 @@
 
 <script type="text/javascript">
 $(document).ready(function () {
-	$('#user_assign_lic').val("true"); 
     $('.class_licenses').change(function() {
 		$('#user_license_expiry_date').val($(".class_licenses :selected").text());
-		$('#user_assign_lic').val("true"); 
     });	
 });
 </script>
