--- a/app/views/schools/_form.html.erb
+++ b/app/views/schools/_form.html.erb
@@ -105,7 +105,7 @@
 				<%#=end%>	
 	        </div><!-- panel-body -->
 	        <div class="panel-footer" data-no-turbolink>
-	            <%= f.submit "Save", class: "btn btn-primary btn-sm", data: { disable_with: 'Saving...' } %>
+	            <%= f.submit "Save", class: "btn btn-primary btn-sm btn-xs", data: { disable_with: 'Saving...' } %>
 				<%= link_to 'Cancel', schools_path, class: "btn btn-white btn-xs"%>
 	        </div>
 			<% end %>
