--- a/app/views/user_mailer/user_password_changed.text.erb
+++ b/app/views/user_mailer/user_password_changed.text.erb
@@ -1,7 +1,7 @@
 Welcome to Books That Grow
 
 Hello, <%= @username %>  
-Your account email address has been changes by: <%= @logged_in_user%>
+Your account password has been changes by: <%= @logged_in_user%>
 
 Your email address is: <%= @new_email%>
 
