--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -25,7 +25,9 @@
 					<%= link_to 'Cancel', users_path(:role_id => 1), class: "btn btn-white btn-xs"%>
 				<% elsif @role_id.eql?('2')%>
 				    <%= link_to 'Cancel', users_path(:role_id => 2, :school_id => session[:school_id]), class: "btn btn-white btn-xs"%>
-				<%end%>	
+				<% elsif @role_id.eql?('3')%>
+				    <%= link_to 'Cancel', users_path(:role_id => 3, :school_id => session[:school_id]), class: "btn btn-white btn-xs"%>
+				<%end%>
 	        </div>
 			<% end %>
 			<%= hidden_field_tag :send_mail, @send_mail%>
@@ -41,10 +43,6 @@
 	else if(<%= @role_id.eql?('2')%>)
 	{
 	    showHideMenu('li_school');	
-	}
-	else if(<%= @role_id.eql?('3')%>)
-	{
-	    showHideMenu('li_teacher');	
 	}
 	
 email_valid = "<%= url_for :controller=> 'users', :action => 'email_validation', :id=> action_name.eql?("edit") ? @user.id : 0%>"	
