--- a/app/views/users/_common_fields.html.erb
+++ b/app/views/users/_common_fields.html.erb
@@ -66,13 +66,44 @@
 						</div> 
 				    </div>
 				<%end%>
-				<%#= hidden_field_tag :accessright_checked %>
+				<% unless @role_id.eql?('1')%>
+				    <%= hidden_field_tag :classroom_ids %>
+	                <div class="row">
+	                    <div class="col-sm-9">
+	                        <div class="form-group">
+								<%= select_tag "classroom_id", options_from_collection_for_select(@classrooms, "id", "name"), :class=>"", :size=>"8", :multiple=>"multiple" %>
+							</div>
+						</div> 
+					</div>
+				<%end%>
 				
+
 <script type="text/javascript">
-// jQuery(document).ready(function(){
-// $('#accessright_checked').val($("input[type='checkbox']").val());				
-// $( ".class_accessright" ).on( "click", function() {
-//   $('#accessright_checked').val($( "input:checked" ).val());
-// });
-// });
+selectedClassrooms = [];
+
+$(document).ready(function() {
+  $('#classroom_id').multiSelect({
+    afterSelect: function(values){
+	  values = parseInt(values);	
+	  selectedClassrooms.push(values);
+	  $('#classroom_ids').val(selectedClassrooms.join(','));
+    },
+    afterDeselect: function(values){
+	  values = parseInt(values);
+	  selectedClassrooms.removeByValue(values);
+	  $('#classroom_ids').val(selectedClassrooms.join(','));
+    }
+  });
+  
+  
+});
+
+Array.prototype.removeByValue = function(val) {
+    for(var i=0; i<this.length; i++) {
+        if(this[i] == val) {
+            this.splice(i, 1);
+            break;
+        }
+    }
+}
 </script> 
