--- a/app/views/schools/index.html.erb
+++ b/app/views/schools/index.html.erb
@@ -3,8 +3,8 @@
 <div class="panel panel-default">
 <div class="panel-body"> 
 	<div class="index_page_btns" data-no-turbolink>
-        <%=link_to 'Import School List', new_school_path, :class=>"btn btn-success btn-xs"%>
-		<%=link_to 'Download Sample', new_school_path, :class=>"btn btn-success btn-xs"%>
+		<%=link_to 'Import School List', import_list_schools_path, :class=>"btn btn-success btn-xs"%>
+		<%=link_to 'Download Sample', download_school_list_schools_path(:format => :xls), :class=>"btn btn-success btn-xs"%>
 		<% if can? :create, School %> <%=link_to 'Add School', new_school_path, :class=>"btn btn-success btn-xs"%> <%end%>
 		<%=link_to 'Renew', new_school_path, :class=>"btn btn-success btn-xs"%>
 		<%=submit_tag 'Delete', :class=>"btn btn-success btn-xs delete-school-list", :id=>'delete_school',:disabled => true, data: { confirm: 'Are you sure?' } %>
