Working on classrooms controller

--- a/app/views/classrooms/_form.html.erb
+++ b/app/views/classrooms/_form.html.erb
@@ -2,7 +2,7 @@
 	<div class="col-md-12">
 	    <div class="panel panel-default">
 	        <div class="panel-heading">
-	            <h4 class="panel-title">Classroom Form</h4>
+	            <!-- <h4 class="panel-title">Classroom Form</h4> -->
 	            <p>Please enter all mandatory (<span class="asterisk">*</span>) fields.</p>
 	        </div>
 	        <div class="panel-body">
@@ -61,7 +61,7 @@
 	            </div>
 	        </div><!-- panel-body -->
 	        <div class="panel-footer" data-no-turbolink>
-	            <%= f.submit "Save", class: "btn btn-primary btn-sm", data: { disable_with: 'Saving...' } %>
+	            <%= f.submit "Save", class: "btn btn-primary btn-sm btn-xs", data: { disable_with: 'Saving...' } %>
 				<%= link_to 'Cancel', classrooms_path, class: "btn btn-white btn-xs"%>
 	        </div>
 			<% end %>
