--- a/app/views/schools/index.html.erb
+++ b/app/views/schools/index.html.erb
@@ -46,7 +46,8 @@
 						  <%=link_to 'Teacher List', users_path(:school_id=>school, :role_id=>3), :class=>"btn btn-primary btn-xs"%> |
 						<button class="btn btn-primary btn-xs license_details" data-toggle="modal" data-target="#school_license_details" data-input='<%=school.id%>' >
 					        License Details
-					    </button> 
+					    </button> |
+						<%= link_to '<i title="Add Classroom" class="fa fa-users"></i>'.html_safe, new_classroom_path(:school_id=>school)%> 
 				     </td>
                  </tr>
 				 <% end %>
