Working on classrooms controller

--- a/app/views/classrooms/_form.html.erb
+++ b/app/views/classrooms/_form.html.erb
@@ -7,6 +7,7 @@
 	        </div>
 	        <div class="panel-body">
 				<%= form_for(@classroom, :html=>{:class=>"form_validation"} ) do |f| %>
+				    <%=f.hidden_field :school_id, :value=>@school_id%>
 				    <% if @classroom.errors.any? %>
 				    <div id="error_explanation">
 				        <h4><%= pluralize(@classroom.errors.count, "error") %> prohibited this classroom from being saved:</h4>
