--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -47,7 +47,7 @@
 			  <%#=end%>
 			  <li><%= link_to '<i class="fa fa-caret-right"></i>'.html_safe + "School List", schools_path %></li>
 			  <!-- <li><%#= link_to '<i class="fa fa-caret-right"></i>'.html_safe + "Classroom List", classrooms_path %></li>
-			  <li><%#= link_to '<i class="fa fa-caret-right"></i>'.html_safe + "Student List", users_path(:role_id => 4) %></li> -->
+			  <li><%= link_to '<i class="fa fa-caret-right"></i>'.html_safe + "Student List", users_path(:role_id => 4) %></li> -->
           </ul>
         </li>
 		
