--- a/app/views/users/_common_fields.html.erb
+++ b/app/views/users/_common_fields.html.erb
@@ -54,8 +54,7 @@
 	                        </div>
 	                    </div>
 	                </div>
-	            </div>
-				<%end%>
+	            <%end%>
 				<% if params[:role_id] == "4" %>
 				<div class="row">
 	                <div class="col-sm-3">
@@ -103,11 +102,12 @@
 	                <div class="row">
 	                    <div class="col-sm-9">
 	                        <div class="form-group">
-								<%= select_tag "classroom_id", options_from_collection_for_select(@classrooms, "id", "name"), :class=>"", :size=>"8", :multiple=>"multiple" %>
+								<%#= select_tag "classroom_id", options_from_collection_for_select(@classrooms, "id", "name"), :class=>"", :size=>"8", :multiple=>"multiple" %>
 							</div>
 						</div> 
 					</div>
 				<%end%>
+            </div>
 				
 
 <script type="text/javascript">
@@ -126,6 +126,8 @@ $(document).ready(function() {
 	  $('#classroom_ids').val(selectedClassrooms.join(','));
     }
   });
+  
+  
 });
 
 Array.prototype.removeByValue = function(val) {
