--- a/app/views/users/_common_fields.html.erb
+++ b/app/views/users/_common_fields.html.erb
@@ -71,7 +71,7 @@
 	                <div class="row">
 	                    <div class="col-sm-9">
 	                        <div class="form-group">
-								<%= select_tag "classroom_id", options_from_collection_for_select(@classrooms, "id", "name"), :class=>"", :size=>"8", :multiple=>"multiple" %>
+								<%#= select_tag "classroom_id", options_from_collection_for_select(@classrooms, "id", "name"), :class=>"", :size=>"8", :multiple=>"multiple" %>
 							</div>
 						</div> 
 					</div>
