--- a/app/views/classrooms/show.html.erb
+++ b/app/views/classrooms/show.html.erb
@@ -13,25 +13,9 @@
 			    	<strong>Name:</strong>
 			    	<%= @classroom.name %>
             	</address>
-            	<address>
-			    	<strong>Cover Image:</strong>
-			    	<%= @classroom.cover_image %>
-            	</address>
-            	<address>
-			    	<strong>Secret Key:</strong>
-			    	<%= @classroom.secret_key %>
-            	</address>
-            	<address>
-			    	<strong>Teacher Count:</strong>
-			    	<%= @classroom.teacher_count %>
-            	</address>
-            	<address>
-			    	<strong>Student Count:</strong>
-			    	<%= @classroom.student_count %>
-            	</address>
-			    <div data-no-turbolink>
-			    	<%= link_to 'Edit', edit_classroom_path(@classroom), :class=>"btn btn-success btn-xs", data: { disable_with: 'Saving...' } %>
-					<%= link_to 'Cancel', classrooms_path, class: "btn btn-white btn-xs"%>
+            	<div data-no-turbolink>
+			    	<%= link_to 'Edit', edit_classroom_path(@classroom, :school_id=>@classroom.school_id), :class=>"btn btn-success btn-xs", data: { disable_with: 'Saving...' } %>
+					<%= link_to 'Cancel', classrooms_path(:school_id=>@classroom.school_id), class: "btn btn-white btn-xs"%>
         	    </div>
 		    </div>
         </div>
