--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -46,8 +46,8 @@
 			      <li><%= link_to '<i class="fa fa-caret-right"></i>'.html_safe + "Add School", new_school_path %></li>
 			  <%#=end%>
 			  <li><%= link_to '<i class="fa fa-caret-right"></i>'.html_safe + "School List", schools_path %></li>
-			  <li><%= link_to '<i class="fa fa-caret-right"></i>'.html_safe + "Classroom List", classrooms_path %></li>
-			  <li><%= link_to '<i class="fa fa-caret-right"></i>'.html_safe + "Student List", users_path(:role_id => 4) %></li>
+			  <!-- <li><%#= link_to '<i class="fa fa-caret-right"></i>'.html_safe + "Classroom List", classrooms_path %></li>
+			  <li><%#= link_to '<i class="fa fa-caret-right"></i>'.html_safe + "Student List", users_path(:role_id => 4) %></li> -->
           </ul>
         </li>
 		
@@ -61,13 +61,6 @@
           </ul
         </li>
 		<%#=end%>
-		<!-- <li class="nav-parent" id="li_teacher"><%= link_to '<i class="glyphicon glyphicon-user"></i>'.html_safe + "Teacher", root_path %>
-			<span class="arrow arrw-pos" container_li="li_teacher"></span>
-          <ul class="children">
-             <li><%#= link_to '<i class="fa fa-caret-right"></i>'.html_safe + "Add Teacher", new_user_path(:role_id => 3)%></li>
-            <li><%#= link_to '<i class="fa fa-caret-right"></i>'.html_safe + "Teacher List", users_path(:role_id => 3) %></li>
-          </ul
-        </li> -->
 		<%#= if current_user.is_web_admin?%>
 		<li class="nav-parent" id="li_accessright"><a href=""><i class="glyphicon glyphicon-ban-circle"></i> <span>Access Rights</span></a>
 			<span class="arrow arrw-pos" container_li="li_accessright"></span>
