--- a/app/views/schools/index.html.erb
+++ b/app/views/schools/index.html.erb
@@ -1,5 +1,5 @@
 
-<%= form_tag 'schools/delete_school', remote: true do %>
+<%#= form_tag 'schools/delete_school', remote: true do %>
 <div class="panel panel-default">
 <div class="panel-body"> 
 	<div class="index_page_btns" data-no-turbolink>
@@ -46,7 +46,8 @@
 						  <%=link_to 'Teacher List', users_path(:school_id=>school, :role_id=>3), :class=>"btn btn-primary btn-xs"%> |
 						<button class="btn btn-primary btn-xs license_details" data-toggle="modal" data-target="#school_license_details" data-input='<%=school.id%>' >
 					        License Details
-					    </button> 
+					    </button> |
+						<%= link_to '<i title="Add License" class="fa fa-users"></i>'.html_safe, new_classroom_path(:school_id=>school) %>
 				     </td>
                  </tr>
 				 <% end %>
@@ -58,7 +59,7 @@
 		<%= paginate @schools %>
 	</div>	
 </div>		  
-<% end %>		  
+<%#= end %>		  
 
 
 <div class="modal fade" id="school_license_details" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
