--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -26,11 +26,13 @@
 			    	<%= @user.email %>
             	</address>
 			    <div data-no-turbolink>
-			        <%= link_to 'Edit', edit_user_path(@user, :role_id => @user.role_id), :class=>"btn btn-success btn-xs" %>
-					<% if @user.role_id.eql?(1)%>
-						<%= link_to 'Cancel', users_path(:role_id => 1), class: "btn btn-white btn-xs"%>
-					<% elsif @user.role_id.eql?(2)%>
-					    <%= link_to 'Cancel', users_path(:role_id => 2), class: "btn btn-white btn-xs"%>
+			        <%= link_to 'Edit', edit_user_path(@user, :role_id => @user.role_id, :school_id=>@school.id), :class=>"btn btn-success btn-xs" %>
+					<% if @user.role_id.eql?('1')%>
+						<%= link_to 'Cancel', users_path(:role_id => 1, :school_id=>@school.id), class: "btn btn-white btn-xs"%>
+					<% elsif @user.role_id.eql?('2')%>
+					    <%= link_to 'Cancel', users_path(:role_id => 2, :school_id=>@school.id), class: "btn btn-white btn-xs"%>
+					<% elsif @user.role_id.eql?('3')%>
+					    <%= link_to 'Cancel', users_path(:role_id => 3, :school_id=>@school.id), class: "btn btn-white btn-xs"%>	
 					<%end%>
         	    </div>
 		    </div>
@@ -44,6 +46,10 @@ if( <%= @role_id.eql?('1')%>)
 }
 else if(<%= @role_id.eql?('2')%>)
 {
-    showHideMenu('li_schooladmin');	
+    showHideMenu('li_school');	
+}
+else if(<%= @role_id.eql?('3')%>)
+{
+    showHideMenu('li_school');	
 }
 </script>
