--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -39,9 +39,17 @@
 					 
    				      <td data-no-turbolink>
    				      	<% if user.email == current_user.email %>
-   				      		<%= link_to '<i title="Edit User" class="fa fa-pencil"></i>'.html_safe, edit_user_path(user, :role_id => @role_id, :school_id=>@school.id) %>  | 
-   				      	<% else %>			
-						  <%= link_to '<i title="Edit User" class="fa fa-pencil"></i>'.html_safe, edit_user_path(user, :role_id => @role_id, :school_id=>@school.id) %> | 
+						    <%unless @school.blank?%>
+   				      		    <%= link_to '<i title="Edit User" class="fa fa-pencil"></i>'.html_safe, edit_user_path(user, :role_id => @role_id, :school_id=>@school.id) %>  | 
+							<%else%>
+							    <%= link_to '<i title="Edit User" class="fa fa-pencil"></i>'.html_safe, edit_user_path(user, :role_id => @role_id) %>  |
+							<%end%>	
+   				      	<% else %>	
+						    <%unless @school.blank?%>		
+						        <%= link_to '<i title="Edit User" class="fa fa-pencil"></i>'.html_safe, edit_user_path(user, :role_id => @role_id, :school_id=>@school.id) %> |
+						    <%else%>
+						        <%= link_to '<i title="Edit User" class="fa fa-pencil"></i>'.html_safe, edit_user_path(user, :role_id => @role_id) %> |
+						    <% end %> 
 						<% end %> 
    				   	      <%= link_to '<i title="Archive User" class="glyphicon glyphicon-trash"></i>'.html_safe, user, method: :delete, data: { confirm: 'Are you sure?' } %> | 
 						  <%= link_to '<i title="Remove License" class="fa fa-minus-square"></i>'.html_safe, remove_license_users_path(:id=>user.id) , data: { confirm: 'Are you sure?' } %> | 
