--- a/app/views/schools/index.html.erb
+++ b/app/views/schools/index.html.erb
@@ -47,7 +47,8 @@
 						<button class="btn btn-primary btn-xs license_details" data-toggle="modal" data-target="#school_license_details" data-input='<%=school.id%>' >
 					        License Details
 					    </button> |
-						<%= link_to '<i title="Add License" class="fa fa-users"></i>'.html_safe, new_classroom_path(:school_id=>school) %>
+						<%=link_to 'Student List', users_path(:school_id=>school, :role_id=>4), :class=>"btn btn-primary btn-xs"%> |
+						<%= link_to '<i title="Add License" class="fa fa-users"></i>'.html_safe, classrooms_path(:school_id=>school) %> 
 				     </td>
                  </tr>
 				 <% end %>
